<resources>
    <string name="app_name">Artion</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_my_auction">My Auction</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="have_account">Already have account? </string>
    <string name="login_here">Login Here</string>
    <string name="buyout_price">Buyout price</string>
    <string name="bid">Bid</string>
    <string name="bid_price">Bid Price</string>
    <string name="running_time">Running time</string>
    <string name="buyout">Buyout</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="product_photo">Product photo</string>
    <string name="category">Category</string>
    <string name="add_auction">Add Auction</string>
    <string name="home">Home</string>
    <string name="profile_card">Profile Card</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="auction">Auction</string>
    <string name="logout">Logout</string>
    <string name="privacy_and_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="help">Help</string>
    <string name="extra">Extra</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="edit_your_personal_information">Edit your personal information</string>
    <string name="your_info">Your info</string>
    <string name="account_setting">Account setting</string>
    <string name="btn_logout">Logout</string>
    <string name="location_hint">Indonesia, Yogyakarta</string>
    <string name="QR_Code">QR Code Pembayaran</string>
    <string name="name">Name</string>
    <string name="name_hint">John Doe</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="content_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="create_auction">Create Auction</string>
    <string name="add_photo">+ Add Photo</string>
    <string name="title_of_the_work">Title of the work</string>
    <string name="enter_a_title_of_the_work">Enter a title of the work</string>
    <string name="description_of_the_work">Description of the work</string>
    <string name="enter_a_work_description">Enter a Work Description</string>
    <string name="_2d">2D</string>
    <string name="_3d">3D</string>
    <string name="price">Price</string>
    <string name="starting_at">Starting at</string>
    <string name="arrange">Arrange</string>
    <string name="buyout_at">Buyout at</string>
    <string name="time_range">Time Range</string>
    <string name="category_title">Category</string>
    <string name="_1_days">1 Days</string>
    <string name="_3_days">3 Days</string>
    <string name="_7_days">7 Days</string>
    <string name="register_here">Register Here</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="app_logo">App logo</string>
    <string name="_90_days">90 Days</string>
    <string name="_30_days">30 Days</string>
    <string name="_15_days">15 Days</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Profile</string>
    <string name="tab_text_3">Setting</string>
    <string name="tab_auction_1">My Auction</string>
    <string name="tab_auction_2">My Bid</string>
    <string name="tab_auction_3">History</string>
    <string name="content_tab_home">Welcome Home</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="search_hint">Search di Artion</string>
    <string name="zero">0</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="content_tab_bid">My Bid</string>
    <string name="content_tab_auction">My Auction</string>
    <string name="content_tab_history">History</string>
    <string name="field_required">Field cannot be empty!</string>
    <string name="must_be_number">This field must be filled with numbers!</string>
    <string name="image_required">Please, Insert picture first!</string>
    <string name="choose_catagory">Select a category!</string>
    <string name="warn_buy_out_over_start_price">Buy out price must be greater than the starting price!</string>
    <string name="_2d_category_button">2D category button</string>
    <string name="_3d_category_button">3D category button</string>
    <string name="start_bid">START BID</string>
    <string name="buy_out">BUY OUT</string>
    <string name="price_now">PRICE NOW</string>
    <string name="join_auction">Join Auction</string>
    <string name="auction_image">AUCTION IMAGE</string>
    <string name="divider">DIVIDER</string>
    <string name="pay_now">Pay Now</string>
    <string name="search">Search in Artion</string>
    <string name="search_in_artion">Search in Artion</string>
    <string name="search_icon">search icon</string>
    <string name="username">Username</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="notification_button">Notification Button</string>
    <string name="auction_result">Auction result</string>
    <string name="danger_photo">Danger Photo</string>
    <string name="alert_cancel">Caution!</string>
    <string name="alert_text">Are you sure you want to cancel the auction?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="buy_out_">Buy Out : </string>
    <string name="highest_bid">Highest Bid : </string>
    <string name="price_">Price : </string>
    <string name="danger_sign">DANGER SIGN</string>
    <string name="cancel_auction">Cancel Auction!</string>
    <string name="subtitle_cancel">Are you sure want to cancel this auction?</string>
    <string name="buy_out_price">Buy out price</string>
    <string name="there_s_no_auction">There\'s no Auction yet</string>
    <string name="there_s_no_bid">There\'s no Bid yet</string>
    <string name="there_s_no_history">There\'s no History yet</string>
    <string name="email_or_pass_wrong">Email or Password Wrong.</string>
    <string name="login_failed">Login failed.</string>
    <string name="final_price">FINAL PRICE</string>
    <string name="login_title">login title</string>
    <string name="enter_title">Enter the title</string>
</resources>