<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="14dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@drawable/rounded_ui"
            android:backgroundTint="@color/bluegray"
            android:elevation="30dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/product_photo"
                android:src="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/artist"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/tv_title"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_auction_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/running_time"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@+id/tv_artist"
                app:layout_constraintTop_toBottomOf="@+id/tv_artist" />

            <TextView
                android:id="@+id/tv_bid_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/bid_price"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_buyout_price"
                app:layout_constraintEnd_toStartOf="@+id/tv_buyout_price"
                app:layout_constraintTop_toTopOf="@+id/tv_buyout_price" />

            <TextView
                android:id="@+id/tv_buyout_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/buyout_price"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_category"
                app:layout_constraintTop_toBottomOf="@+id/tv_category" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_ui"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/auction_result"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_buyout_price"
                app:layout_constraintTop_toBottomOf="@+id/tv_buyout_price" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
