<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment.PaymentActivity">

    <ImageView
        android:id="@+id/profile_card"
        android:layout_width="408dp"
        android:layout_height="344dp"
        android:contentDescription="@string/profile_card"
        android:src="@drawable/card_layout_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/QR_Code"
        android:src="@drawable/qr_code"
        app:layout_constraintBottom_toBottomOf="@+id/profile_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_card" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_card"
        tools:text="Detail Payment" />

    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/divider"
        android:src="@color/bluegray"
        app:layout_constraintTop_toBottomOf="@id/detail_name" />

    <Button
        android:id="@+id/btn_pay_now"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_ui"
        android:backgroundTint="@color/bluegray"
        android:text="@string/pay_now"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_payment_buyout_price_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_payment_buyout_price" />

    <TextView
        android:id="@+id/tv_payment_buyout_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/buy_out_price"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_payment_buyout_price_number"
        app:layout_constraintEnd_toEndOf="@+id/tv_payment_buyout_price_number"
        app:layout_constraintStart_toStartOf="@+id/tv_payment_buyout_price_number" />

    <TextView
        android:id="@+id/tv_payment_buyout_price_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/red_pink"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Rp. 100.000" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:layout_editor_absoluteX="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_ui"
            android:backgroundTint="@color/bluegray"
            android:elevation="30dp">

            <ImageView
                android:id="@+id/iv_payment_imageView"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/product_photo"
                android:src="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_payment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_payment_imageView"
                app:layout_constraintTop_toTopOf="@+id/iv_payment_imageView" />

            <TextView
                android:id="@+id/tv_payment_artist"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/artist"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/tv_payment_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_payment_title" />

            <TextView
                android:id="@+id/tv_payment_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_payment_artist"
                app:layout_constraintTop_toBottomOf="@+id/tv_payment_artist" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>