<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="14dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <ImageView
            android:id="@+id/iv_danger_sign"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/danger_sign"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/danger_sign" />

        <TextView
            android:id="@+id/cancel_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_auction"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_danger_sign"/>

        <TextView
            android:id="@+id/cancel_dialog_subtitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_cancel"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_margin="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancel_dialog_title"/>

        <Button
            android:id="@+id/btn_yes_cancel"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_ui"
            android:backgroundTint="@color/green_greek_garden"
            android:text="@string/yes"
            android:textStyle="bold"
            android:textColor="@color/black_lead"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/cancel_dialog_subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel_dialog_subtitle" />

        <Button
            android:id="@+id/btn_no_cancel"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_ui"
            android:backgroundTint="@color/red_pink"
            android:text="@string/no"
            android:textStyle="bold"
            android:textColor="@color/black_lead"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/cancel_dialog_subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel_dialog_subtitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>