<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.AuctionItemDetails">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/black_lead"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/auction_item_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black_lead"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="@id/auction_item_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/artist" />

    <ImageView
        android:id="@+id/auction_item_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:background="@color/bluegray"
        android:contentDescription="@string/auction_image"
        android:src="@drawable/place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_artist" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/black_lead"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/auction_item_image"
        app:layout_constraintStart_toStartOf="@id/auction_item_image"
        app:layout_constraintTop_toBottomOf="@id/auction_item_image"
        tools:text="@string/content_description" />


    <TextView
        android:id="@+id/tv_final_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/final_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_number_price_final"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_number_price_final"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/tv_number_price_final"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_ui"
        android:backgroundTint="@color/green_greek_garden"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black_lead"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_final_price"
        tools:text="@string/final_price" />
</androidx.constraintlayout.widget.ConstraintLayout>